--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,3 +32,11 @@ steps:
   inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
+
+- task: SonarCloudPrepare@1
+  inputs:
+    organization: 'dotnet-dash'
+    SonarCloud: 'SonarCloud connection'
+    scannerMode: 'MSBuild'
+    projectKey: 'dotnet-dash_dash'
+    projectName: 'dash'
