--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -28,3 +28,6 @@ jobs:
       with:
         # Set the sonar.projectBaseDir analysis property
         projectBaseDir: . # optional, default is .
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
