--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -27,7 +27,7 @@ jobs:
       uses: SonarSource/sonarcloud-github-action@v1.3
       with:
         # Set the sonar.projectBaseDir analysis property
-        projectBaseDir: ../../src/Dash/src # optional, default is .
+        projectBaseDir: . # optional, default is .
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
