--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -23,11 +23,24 @@ jobs:
       run: dotnet build ./src/Dash/src --configuration Release --no-restore
     - name: Test
       run: dotnet test ./src/Dash/src --no-restore --verbosity normal
-    - name: SonarCloud Scan
-      uses: SonarSource/sonarcloud-github-action@v1.3
-      with:
-        # Set the sonar.projectBaseDir analysis property
-        projectBaseDir: ../../src/Dash/src # optional, default is .
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    - name: Codecov
+      uses: codecov/codecov-action@v1.0.12
+      #with:
+        # User defined upload name. Visible in Codecov UI
+        #name: # optional
+        # Repository upload token - get it from codecov.io. Required only for private repositories
+        #token: # optional
+        # Path to coverage file to upload
+        #file: # optional
+        # Comma-separated list of files to upload
+        #files: # optional
+        # Directory to search for coverage reports.
+        #directory: # optional
+        # Flag upload to group coverage metrics (e.g. unittests | integration | ui,chrome)
+        #flags: # optional
+        # Write upload file to path before uploading
+        #path_to_write_report: # optional
+        # Environment variables to tag the upload with (e.g. PYTHON | OS,PYTHON)
+        #env_vars: # optional
+        # Specify whether or not CI build should fail if Codecov runs into an error during upload
+        #fail_ci_if_error: # optional
