Implemented output directory

--- a/src/Dash/src/Dash/Dash.csproj
+++ b/src/Dash/src/Dash/Dash.csproj
@@ -13,6 +13,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Templates\Ef" />
+    <None Remove="Templates\Erepo" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Templates\Ef" />
+    <EmbeddedResource Include="Templates\Erepo" />
     <EmbeddedResource Include="Templates\Poco">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </EmbeddedResource>
