Implemented the "@@Has" property

--- a/src/Dash/test/Dash.Tests/Dash.Tests.csproj
+++ b/src/Dash/test/Dash.Tests/Dash.Tests.csproj
@@ -11,6 +11,7 @@
     <None Remove="Samples\EmptyBaseDefined.json" />
     <None Remove="Samples\EmptyModel.json" />
     <None Remove="Samples\ExtendBase.json" />
+    <None Remove="Samples\Has.json" />
     <None Remove="Samples\HasAndBelongsToMany.json" />
     <None Remove="Samples\HasMany.json" />
     <None Remove="Samples\HelloWorld.json" />
@@ -19,6 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Samples\Has.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Samples\HasMany.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
