--- a/src/Dash/test/Dash.Tests/Dash.Tests.csproj
+++ b/src/Dash/test/Dash.Tests/Dash.Tests.csproj
@@ -14,12 +14,16 @@
     <None Remove="Samples\Has.json" />
     <None Remove="Samples\HasAndBelongsToMany.json" />
     <None Remove="Samples\HasMany.json" />
+    <None Remove="Samples\HasNullable.json" />
     <None Remove="Samples\HelloWorld.json" />
     <None Remove="Samples\OverrideBaseId.json" />
     <None Remove="Samples\Smoketest1.json" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Samples\HasNullable.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Samples\Has.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
