--- a/src/Dash/src/Dash/Dash.csproj
+++ b/src/Dash/src/Dash/Dash.csproj
@@ -44,4 +44,8 @@
     <PackageReference Include="System.IO.Abstractions" Version="12.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Engine\Parsers\" />
+  </ItemGroup>
+
 </Project>
