--- a/src/Dash/test/Dash.Tests/Dash.Tests.csproj
+++ b/src/Dash/test/Dash.Tests/Dash.Tests.csproj
@@ -84,4 +84,8 @@
     <ProjectReference Include="..\..\src\Dash\Dash.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Engine\Parsers\" />
+  </ItemGroup>
+
 </Project>
