--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,3 +53,16 @@ steps:
 - task: SonarCloudPublish@1
   inputs:
     pollingTimeoutSec: '600'
+
+- task: NuGetCommand@2
+  inputs:
+    command: 'pack'
+    packagesToPack: '**/*.csproj'
+    versioningScheme: 'off'
+    toolPackage: true
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
