--- a/src/Dash/test/Dash.Tests/Dash.Tests.csproj
+++ b/src/Dash/test/Dash.Tests/Dash.Tests.csproj
@@ -13,6 +13,7 @@
     <None Remove="Samples\Configuration.json" />
     <None Remove="Samples\EmptyBaseDefined.json" />
     <None Remove="Samples\EmptyModel.json" />
+    <None Remove="Samples\Errors\EmbeddedTemplateNotFound.json" />
     <None Remove="Samples\Errors\MisconfigurationNoTemplateDefined.json" />
     <None Remove="Samples\ExtendBase.json" />
     <None Remove="Samples\Has.json" />
@@ -27,6 +28,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Samples\Errors\EmbeddedTemplateNotFound.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Samples\Errors\MisconfigurationNoTemplateDefined.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
