--- a/src/Dash/src/Dash/Dash.csproj
+++ b/src/Dash/src/Dash/Dash.csproj
@@ -49,7 +49,7 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.7" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.7" />
     <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="3.1.7" />
-    <PackageReference Include="Morestachio" Version="4.3.0.392" />
+    <PackageReference Include="Scriban" Version="2.1.4" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20427.1" />
     <PackageReference Include="System.CommandLine.DragonFruit" Version="0.3.0-alpha.20427.1" />
     <PackageReference Include="System.IO.Abstractions" Version="12.1.1" />
