--- a/src/Dash/src/Dash/Dash.csproj
+++ b/src/Dash/src/Dash/Dash.csproj
@@ -4,7 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <Nullable>enable</Nullable>
-    <Version>0.0.4-alpha</Version>
+    <Version>0.1.0-alpha</Version>
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>dotnet-dash</ToolCommandName>
     <PackageOutputPath>./nupkg</PackageOutputPath>
@@ -12,7 +12,11 @@
     <Authors>Huy Hoang</Authors>
     <CodeAnalysisRuleSet>..\.sonarlint\dotnet-dash_dashcsharp.ruleset</CodeAnalysisRuleSet>
     <Description>Dash is a Model-driven code generator.</Description>
-    <PackageReleaseNotes>Bugfix: built-in template generated code of an internal Entity.</PackageReleaseNotes>
+    <PackageReleaseNotes>
+      * Generated code will be formatted according to .editorconfig
+      * Several bugfixes
+      * Replaced template engine
+    </PackageReleaseNotes>
     <PackageProjectUrl>https://github.com/dotnet-dash</PackageProjectUrl>
     <PackageIcon>packageicon.png</PackageIcon>
     <Copyright>Huy Hoang</Copyright>
@@ -43,7 +47,6 @@
     <PackageReference Include="CsvHelper" Version="15.0.5" />
     <PackageReference Include="Microsoft.Build.Locator" Version="1.2.6" />
     <PackageReference Include="Microsoft.CodeAnalysis" Version="3.7.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.7.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="3.7.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.7" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.7" />
