--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,8 @@
 site_name: Dash
 nav:
     - Home: index.md
-    - Introduction:
-        - Getting Started: introduction/getting-started.md
     - User Guide:
-        - Writing Your Model: user-guide/writing-your-model.md
+        - Writing Your Model File: user-guide/writing-your-model-file.md
         - Writing Your Custom Templates: user-guide/custom-templates.md
     - Examples:
         - Country And Currency: examples/country-and-currency.md
