--- a/src/Dash/src/Dash/Dash.csproj
+++ b/src/Dash/src/Dash/Dash.csproj
@@ -4,7 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <Nullable>enable</Nullable>
-    <Version>0.1.1-alpha</Version>
+    <Version>0.1.2-alpha</Version>
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>dotnet-dash</ToolCommandName>
     <PackageOutputPath>./nupkg</PackageOutputPath>
@@ -12,7 +12,7 @@
     <Authors>Huy Hoang</Authors>
     <CodeAnalysisRuleSet>..\.sonarlint\dotnet-dash_dashcsharp.ruleset</CodeAnalysisRuleSet>
     <Description>Dash is a command-line tool for fast model-driven code generation.</Description>
-    <PackageReleaseNotes>Fix namespace and DbContext classname of generated code.</PackageReleaseNotes>
+    <PackageReleaseNotes>Bugfix: respect Header and AutogenSuffix settings in Model file.</PackageReleaseNotes>
     <PackageProjectUrl>https://github.com/dotnet-dash</PackageProjectUrl>
     <PackageIcon>packageicon.png</PackageIcon>
     <Copyright>Huy Hoang</Copyright>
