--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,20 @@
 site_name: Dash
+site_description: Documentation for dotnet dash cli tool
+site_author: Huy Hoang
+
+repo_url: https://github.com/dotnet-dash/dash
+
 nav:
-    - Home: index.md
-    - User Guide:
-        - Writing Your Model File: user-guide/writing-your-model-file.md
-        - Writing Your Custom Templates: user-guide/custom-templates.md
-    - Examples:
+    - HOME: index.md
+    - MODEL FILE:
+        - Introduction: model-file/introduction.md
+        - Defining Relationships: model-file/defining-relationships.md
+        - Seeding data: model-file/seeding-data.md
+        - Inheritance: model-file/inheritance.md
+    - TEMPLATES:
+        - Built-in Templates: templates/built-in-templates.md
+        - Custom Templates: templates/custom-templates.md
+    - EXAMPLES:
         - Country And Currency: examples/country-and-currency.md
 
 theme:
@@ -16,3 +26,5 @@ theme:
 
 markdown_extensions:
     - admonition
+
+copyright: Copyright &copy; 2020 Huy Hoang
