--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,16 +5,16 @@ site_author: Huy Hoang
 repo_url: https://github.com/dotnet-dash/dash
 
 nav:
-    - HOME: index.md
-    - MODEL FILE:
+    - Home: index.md
+    - Model File:
         - Introduction: model-file/introduction.md
         - Defining Relationships: model-file/defining-relationships.md
         - Seeding data: model-file/seeding-data.md
         - Inheritance: model-file/inheritance.md
-    - TEMPLATES:
+    - Templates:
         - Built-in Templates: templates/built-in-templates.md
         - Custom Templates: templates/custom-templates.md
-    - EXAMPLES:
+    - Examples:
         - Country And Currency: examples/country-and-currency.md
 
 theme:
