--- a/src/Dash/src/Dash/Dash.csproj
+++ b/src/Dash/src/Dash/Dash.csproj
@@ -44,6 +44,7 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="15.0.8" />
+    <PackageReference Include="Inflector.NetStandard" Version="1.2.2" />
     <PackageReference Include="Microsoft.Build.Locator" Version="1.2.6" />
     <PackageReference Include="Microsoft.CodeAnalysis" Version="3.7.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="3.7.0" />
@@ -65,6 +66,7 @@
 
   <ItemGroup>
     <Folder Include="PreprocessingSteps\Default\" />
+    <Folder Include="Templates\ef\" />
   </ItemGroup>
 
 </Project>
